# worship47

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  django.yml  test.yml
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0003_auto_20221227_1731.py  0004_auto_20221227_1804.py  0005_auto_20221227_1817.py
apps/songs/: models.py  views.py
apps/songs/api/: pagination.py  views.py
apps/songs/migrations/: 0003_auto_20221227_1756.py  0004_auto_20221227_1805.py
src/: conftest.py  manage.py
src/apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
src/apps/accounts/api/: urls.py
src/apps/songs/: admin.py  forms.py  models.py  services.py  urls.py  views.py
src/apps/songs/api/: pagination.py  serializers.py  urls.py  views.py
src/apps/songs/management/commands/: anti_yo.py
src/apps/songs/tests/: test_endpoints.py  tests.py
src/templates/songs/: song_create_form.html  song_create_form1.html  song_detail_old.html  song_list.html  song_list_old.html  song_update_form.html  song_update_form_old.html
src/templates/worship/: index.html
src/worship47/: urls.py  wsgi.py
src/worship47/settings/: __init__.py  admin.py  apps.py  auth.py  db.py  files.py  localize.py  logging.py  middleware.py  rest.py  sentry.py  tagulous.py  templates.py  vars.py
