[tool.poetry]
name = "worship47"
version = "1.0.0"
description = "Worship songs collection. With translations, chords, examples and so on"
authors = ["Guest007 <trash4@yandex.ru>", "Warzone01 <warzone01@gmail.com>"]
license = "MIT"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2 = "^2.9.6"
django-ckeditor = "^6.5.1"
django-tagulous = "^1.3.3"
django-versatileimagefield = "^3.0"
django-widget-tweaks = "^1.4.12"
djangorestframework = "^3.14.0"
pytils = "^0.4.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
