[tool.poetry]
name = "worship47"
version = "1.0.0"
description = "Worship songs collection. With translations, chords, examples and so on"
authors = ["Guest007 <trash4@yandex.ru>", "Warzone01 <warzone01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 128
target-version = ['py311']
force-exclude = '''
(
    migrations
    | \tests
    | test*.py
)
'''

[tool.isort]
line_length = 127
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
known_django = "django"
profile = "django"
src_paths = "app"
lines_after_imports = 2
skip_glob = ['**/migrations/**',
            '**/manage.py',
            '**/__init__.py',
            '**/settings/**',
            '**venv/**',
            'media/**',
            'data/**']


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2 = "^2.9.6"
django-ckeditor = "^6.5.1"
django-tagulous = "^1.3.3"
django-versatileimagefield = "^3.0"
django-widget-tweaks = "^1.4.12"
djangorestframework = "^3.14.0"
pytils = "^0.4.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
django-debug-toolbar = "^4.1.0"
black = "^23.3.0"
pre-commit = "^3.3.3"
flake8-print = "^5.0.0"
django-stubs = "^4.2.1"
flake8-debugger = "^4.1.2"
flake8-builtins = "^2.1.0"
flake8-bugbear = "^23.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
