[project]
name = "worship47"
version = "1.0.1"
description = "Worship songs collection. With translations, chords, examples and so on"
authors = [
{ name = "Guest007", email = "trash4@yandex.ru" },
{ name = "Warzone01", email = "warzone01@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.0",
    "django-ckeditor>=6.7.2",
    "django-extensions>=3.2.3",
    "django-tagulous>=2.1.0",
    "django-versatileimagefield>=3.1",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.7",
    "psycopg-binary>=3.2.7",
    "pytils>=0.4.1",
    "sentry-sdk[django]>=2.27.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.1.1",
    "ipython>=8.31.0",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "rich>=13.9.4",
]

[tool.ruff]
# Версии python 3.13 -> py313
target-version = "py313"

# Включение авто исправления по умолчанию
fix = true

# Ограничение длины строки
line-length = 120

# Включенные плагины
lint.select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "C90", # mccabe
    "N",   # pep8-naming
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "I001", # isort unsorted
    "I002", # isort missing required import
]

lint.ignore = ["B904", "B023", "N815"]
# Исключения
exclude = [
    "eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    ".pyc",
    ".pyi",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
    "tests",
    "conftest.py",
    "settings.py",
    "local_settings.py",
    "tenants/serializers.py",
    "s3/serializers.py",
    "bus",
]

[tool.ruff.lint.mccabe]
# Настройка максимальной сложности
max-complexity = 10

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]

[tool.pytest.ini_options]
addopts = "-s -vv"
DJANGO_SETTINGS_MODULE = "worship47.settings"
python_files = "tests.py test_*.py *_tests.py"
